[gd_scene load_steps=5 format=3 uid="uid://cg4m3307fr3et"]

[ext_resource type="Script" path="res://log_entry.gd" id="1_na257"]
[ext_resource type="Texture2D" uid="uid://gpc1r27hshfl" path="res://icons/delete_16dp_E8EAED_FILL0_wght400_GRAD0_opsz20.png" id="2_17t04"]
[ext_resource type="Texture2D" uid="uid://k02v1ts8w6sv" path="res://icons/show_chart_16dp_E8EAED_FILL0_wght400_GRAD0_opsz20.png" id="2_x0kfk"]
[ext_resource type="Texture2D" uid="uid://c5vim3pkg2srl" path="res://icons/library_add_16dp_E8EAED_FILL0_wght400_GRAD0_opsz20.png" id="3_wxmud"]

[node name="LogEntry" type="Control"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 3
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
size_flags_horizontal = 3
script = ExtResource("1_na257")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.121569, 0.137255, 0.156863, 1)

[node name="Container" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="Details" type="HBoxContainer" parent="Container"]
layout_mode = 2
theme_override_constants/separation = 12
alignment = 1

[node name="DeleteBtn" type="Button" parent="Container/Details"]
layout_mode = 2
icon = ExtResource("2_17t04")

[node name="Control" type="Control" parent="Container/Details"]
layout_mode = 2
size_flags_horizontal = 3

[node name="NameOut" type="Label" parent="Container/Details"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Roast 1"

[node name="DateOut" type="Label" parent="Container/Details"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "2001-01-01"

[node name="Control2" type="Control" parent="Container/Details"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ViewBtn" type="Button" parent="Container/Details"]
layout_mode = 2
icon = ExtResource("2_x0kfk")

[node name="CopyBtn" type="Button" parent="Container/Details"]
layout_mode = 2
icon = ExtResource("3_wxmud")

[connection signal="pressed" from="Container/Details/ViewBtn" to="." method="_on_view_btn_pressed"]
